<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

  <!-- Nuevo chat -->
  <shortcut
    android:shortcutId="new_chat"
    android:enabled="true"
    android:icon="@drawable/ic_shortcut_chat"
    android:shortcutShortLabel="@string/shortcut_new_chat_short"
    android:shortcutLongLabel="@string/shortcut_new_chat_long"
    android:rank="0">
    <intent
      android:action="android.intent.action.VIEW"
      android:targetPackage="com.egchat.app"
      android:targetClass="com.egchat.app.MainActivity"
      android:data="egchat://new-chat"/>
    <categories android:name="android.shortcut.conversation"/>
  </shortcut>

  <!-- Mis historias -->
  <shortcut
    android:shortcutId="stories"
    android:enabled="true"
    android:icon="@drawable/ic_shortcut_stories"
    android:shortcutShortLabel="@string/shortcut_stories_short"
    android:shortcutLongLabel="@string/shortcut_stories_long"
    android:rank="1">
    <intent
      android:action="android.intent.action.VIEW"
      android:targetPackage="com.egchat.app"
      android:targetClass="com.egchat.app.MainActivity"
      android:data="egchat://stories"/>
  </shortcut>

  <!-- Escanear QR -->
  <shortcut
    android:shortcutId="qr_scan"
    android:enabled="true"
    android:icon="@drawable/ic_shortcut_qr"
    android:shortcutShortLabel="@string/shortcut_qr_short"
    android:shortcutLongLabel="@string/shortcut_qr_long"
    android:rank="2">
    <intent
      android:action="android.intent.action.VIEW"
      android:targetPackage="com.egchat.app"
      android:targetClass="com.egchat.app.MainActivity"
      android:data="egchat://qr-scanner"/>
  </shortcut>

</shortcuts>
